# projs

cv/: readme.txt  test1_0.py  test1_1.py  test2_1.py  test2_2.py  test2_3.py  test3.py  test4_1.py  test4_2.py  test4_3.py  test5.py  test6_0.py  test6_1.py  test7_0.py  test7_1.py
cvocl/: README.txt
cvocl/src/: CMakeLists.txt
cvocl/src/demos/face_detect/: CMakeLists.txt  face_detect.cpp
cvocl/src/demos/face_detect_ocl/: CMakeLists.txt  face_detect_ocl.cpp
cvocl/src/demos/pedestrian_detect/: CMakeLists.txt  pedestrian_detect.cpp
cvocl/src/demos/pedestrian_detect_ocl/: CMakeLists.txt  pedestrian_detect_ocl.cpp
cvocl/src/demos/performance/: CMakeLists.txt  performance.cpp  performance.h  tests.cpp
cvocl/src/demos/stereo_matching/: CMakeLists.txt  stereo_matching.cpp
cvocl/src/demos/stitching/: CMakeLists.txt  stitching.cpp
cvocl/src/utility_lib/: CMakeLists.txt  utility_lib.cpp  utility_lib.h
gl/: glgetstring.py
py/queue/: queue.py  stack.py  stackandqueue.pl
test/: HelloWorld.java  hello.tcl  hello_tk.pl  nan.c  nltktest01.py  seg.c  sizeof.c  sizeof.sh
test/a/: a.c  a.dsp  a.ncb  a.opt  a.plg
test/a/Debug/: a.ilk  a.pch  vc60.idb
test/cache/: cache  cache.c  cachetest.sh
vtk/: CylinderTexture.py  SphereTexture.py  test1.py
vtk/WikiExample/BackgroundTexture/: CMakeLists.txt
vtk/WikiExample/TextureMapImageData/: CMakeLists.txt
vtk/WikiExample/TextureMapPlane/: CMakeLists.txt
vtk/WikiExample/TextureMapQuad/: CMakeLists.txt
vtk/WikiExample/TexturedButtonWidget/: CMakeLists.txt
vtk/materials/Demos/Animation/: animation.tcl  makeMovie.tcl  moveCamera.tcl
vtk/materials/Demos/Annotation/: axes.tcl  colorBar.tcl  (+1 more)
(+44 files in other folders)
